--- a/index.css
+++ b/index.css
@@ -1,15 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,800&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
+
+/* main {
+  max-width: 1200px; 
+  margin: 0 auto;
+  width: 90%;
+} */
+
 header {
   background-color: #f28cc0;
   height: 90px;
-  width: 100%;
+  width: 100%;  /* Não é necessário */
 }
+
 .titulo-inicio {
   text-align: center;
   padding: 20px;
@@ -18,12 +27,15 @@ header {
   font-weight: 800;
   color: #ffff;
 }
+
 .medicina-tech {
   margin-top: 12px;
 }
+
 .imagem-medicina {
   width: 100%;
 }
+
 .paragrafo-medicina-tech {
   font-size: 60px;
   margin-top: 50px;
@@ -42,7 +54,7 @@ header {
 }
 .robo {
   font-size: 30px;
-  font-weight: 900;
+  font-weight: 900;  /* Não está pegando, o peso 900 não foi importado */
   color: #54affc;
 }
 .robo-cirurgia {
@@ -50,13 +62,17 @@ header {
   border-radius: 20px;
   margin: 20px 0px;
 }
-.paragrafo-robo {
+
+.paragrafo {
   text-align: justify;
   font-size: 20px;
   font-weight: 800;
+  margin-bottom: 40px;
+}
+
+.paragrafo-robo {
   color: #54affc;
   max-width: 560px;
-  margin-bottom: 40px;
 }
 .video-explica {
   margin-bottom: 40px;
@@ -86,12 +102,8 @@ header {
   margin: 20px 0px;
 }
 .paragrafo-laboratorio {
-  text-align: justify;
-  font-size: 20px;
-  font-weight: 800;
   color: #f28cc0;
   max-width: 700px;
-  margin-bottom: 40px;
 }
 .video-laboratorio {
   margin-bottom: 40px;
@@ -143,7 +155,7 @@ header {
 }
 .contato {
   background-color: #f28cc0;
-  height: 100%;
+  height: 100%;  /*  Não precisa   */
   margin: 0 auto;
 }
 .titulo-final {
@@ -154,3 +166,5 @@ header {
   font-size: 30px;
   font-weight: 800;
 }
+
+/* Reaproveitar código, p ex dos elementos p e dos a */
